src/common/main/default/objects/Broker__c/Broker__c.object-meta.xml
<CustomObject>
	<label>Broker</label>
	<nameField>
		<label>Broker Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Brokers</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>