src/common/main/default/objects/Broker__c/fields/Picture__c.field-meta.xml
<CustomField>
	<fullName>Picture__c</fullName>
	<label>Picture</label>
	<type>Url</type>
</CustomField>