src/common/main/default/objects/Broker__c/fields/Picture_IMG__c.field-meta.xml
<CustomField>
	<fullName>Picture_IMG__c</fullName>
	<formula>IMAGE( Picture__c , "picture" , 150, 150)</formula>
	<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
	<label>Picture</label>
	<type>Text</type>
</CustomField>