src/common/main/default/objects/Broker__c/listViews/All.listView-meta.xml
<ListView>
	<fullName>All</fullName>
	<columns>NAME</columns>
	<filterScope>Everything</filterScope>
	<label>All</label>
</ListView>